# vex

./: .gitignore  AGENTS.md  Cargo.toml  README.md  repomix-output.xml
.superpowers/brainstorm/191791-1779921651/content/: theme-presets-v2.html  theme-presets-v3.html  theme-presets.html  theme-slots.html  themes-approach.html
.superpowers/brainstorm/191791-1779921651/state/: server-info
VAULT/: 2026-05-27-000-review-context-sensitive-keybinds-wrapping.md  2026-05-27-001-codequality-context-sensitive-keybinds-wrapping.md  2026-05-27-002-review-git2-operations.md  2026-05-27-003-review-git-screen-module.md  2026-05-27-005-review-multi-select-issues.md  2026-05-27-006-review-multi-select-notes.md  2026-05-27-007-review-pr-diff-view.md
docs/superpowers/specs/: 2026-05-27-markdown-themes-multiselect-design.md
docs/wiki/: configuration.md  home.md  installation.md  usage.md
src/: app.rs  cache.rs  config.rs  diff.rs  git.rs  main.rs  markdown.rs  notes.rs  theme.rs
src/github/: client.rs  mod.rs
src/ui/: dashboard.rs  file_browser.rs  git.rs  issues.rs  mod.rs  notes.rs  popup.rs  prs.rs  roadmap.rs  stats.rs
