[package]
name = "vex"
version = "0.1.0"
edition = "2024"
authors = ["Pebrd"]
description = "Lightweight TUI for GitHub issues and pull requests"
license = "MIT"

[[bin]]
name = "vex"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
anyhow = "1.0.102"
fuzzy-matcher = "0.3.7"
webbrowser = "1.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
